--- a/.env
+++ b/.env
@@ -1,7 +1,14 @@
-host="217.76.50.133"
-user="press_user"
+# host="217.76.50.133"
+# user="press_user"
+# port="3306"
+# password="HJD48&7t63"
+# database= "pressbox_dev"
+# connectionLimit= 100
+
+host="localhost"
+user="media-mawusi"
 port="3306"
-password="HJD48&7t63"
-database= "pressbox_dev"
+password="!Q@z2wsx"
+database= "media_rev"
 connectionLimit= 100
 
