updated mail service

--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-host="217.76.50.133"
-user="press_user"
+host=217.76.50.133
+user=mediarev_user
+password=gQphtPc&3$N3M
+database=mediarev_dev_db
 port="3306"
-password="HJD48&7t63"
-database= "pressbox_dev"
 connectionLimit= 100
 
+
+# host="217.76.50.133"
+# user="press_user"
+# password="HJD48&7t63"
+# database= "pressbox_dev"
